增加热编译示例- 还有问题